inventory/java/InventoryParser.java
// Generated from Inventory.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class InventoryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, PAGE_HEAD=92, CONCERNS=93, PERSEVERANCE=94, 
		MOTIVATION=95, TIME=96, APTITUDE=97, SK=98, SURVEY=99, ANYTHING=100;
	public static final int
		RULE_perseverance = 0, RULE_student_tok = 1, RULE_nuid_tok = 2, RULE_college_tok = 3, 
		RULE_ap_tok = 4, RULE_ib_tok = 5, RULE_trde_tok = 6, RULE_math_tok = 7, 
		RULE_unl_tok = 8, RULE_eof = 9, RULE_inventory = 10, RULE_ace = 11, RULE_ace_head = 12, 
		RULE_survey_head = 13, RULE_survey = 14, RULE_survey_response = 15, RULE_likert_question = 16, 
		RULE_likert_answer = 17, RULE_free_question = 18, RULE_free_answer = 19, 
		RULE_student = 20, RULE_nuid = 21, RULE_collegemajor = 22, RULE_ap = 23, 
		RULE_ib = 24, RULE_trde = 25, RULE_math = 26, RULE_unl = 27, RULE_likert_agree = 28, 
		RULE_likert_conce = 29, RULE_very_strong_agree = 30, RULE_strong_agree = 31, 
		RULE_neutral_agree = 32, RULE_weak_agree = 33, RULE_very_weak_agree = 34, 
		RULE_very_strong_conce = 35, RULE_strong_conce = 36, RULE_neutral_conce = 37, 
		RULE_weak_conce = 38, RULE_very_weak_conce = 39, RULE_txt = 40;
	public static final String[] ruleNames = {
		"perseverance", "student_tok", "nuid_tok", "college_tok", "ap_tok", "ib_tok", 
		"trde_tok", "math_tok", "unl_tok", "eof", "inventory", "ace", "ace_head", 
		"survey_head", "survey", "survey_response", "likert_question", "likert_answer", 
		"free_question", "free_answer", "student", "nuid", "collegemajor", "ap", 
		"ib", "trde", "math", "unl", "likert_agree", "likert_conce", "very_strong_agree", 
		"strong_agree", "neutral_agree", "weak_agree", "very_weak_agree", "very_strong_conce", 
		"strong_conce", "neutral_conce", "weak_conce", "very_weak_conce", "txt"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Student:'", "'NUID:'", "'College/Major:'", "'Advanced Placement'", 
		"'International Baccalaureate'", "'Transfer and Dual Enrollment'", "'Math Courses'", 
		"'UNL Courses'", "'ACE Outcomes'", "'\n'", "'No values entered'", "'ACE 1 Writing'", 
		"'ACE 2 Communication Competence'", "'ACE 3 Math/Stat/Reasoning'", "'ACE 4 Science'", 
		"'ACE 5 Humanities'", "'ACE 6 Social Science'", "'ACE 7 Arts'", "'ACE 8 Civic/Ethics/Stewardship'", 
		"'ACE 9 Global/Diversity'", "'ACE 10 Integrated Product'", "'12. Knowing how to study'", 
		"'13. Making Friends'", "'14. Being in a large environment'", "'15. Paying for college'", 
		"'16. Doing well in my classes'", "'17. Being away from family'", "'18. Finding help if I need it'", 
		"'19. Making the right major/career decision'", "'20. Managing my time'", 
		"'Perseverance '", "'Below are a number of statements that may or may not apply to you. When responding,'", 
		"'think of how you compare to most people. There are no right or wrong answers, so'", 
		"'please answer honestly.'", "'24. New ideas and projects sometimes distract me from previous ones.'", 
		"'25. Setbacks don't discourage me. '", "'26. I have been obsessed with a certain idea or project for a short time but later lost'", 
		"'interest.'", "'27. I am a hard worker.'", "'28. I often set a goal but later choose to pursue a different one.'", 
		"'29. I have difficulty maintaining my focus on projects that take more than a few months to'", 
		"'complete.'", "'30. I finish whatever I begin.'", "'31. I am diligent.'", 
		"'32. My academic performance is important to me.'", "'33. I set goals for the grades I want in my classes.'", 
		"'34. It is important for me to do as well as I can in my courses.'", 
		"'35. I find it difficult to motivate myself to study for my courses.'", 
		"'36. I study just what I need to know to pass.'", "'37. I usually start an assignment shortly after it is assigned.'", 
		"'38. When I have a deadline, I often waste time doing other things.'", 
		"'39. I usually plan out my week's work in advance.'", "'40. I find it hard to stick to my study schedule.'", 
		"'41. I schedule more time to study for difficult classes.'", "'42. I know how to manage my time.'", 
		"'43. I know how to study for tests.'", "'44. I know how to study well.'", 
		"'45. I will develop a strong plan for academic success.'", "'46. Academically, I am very self-disciplined.'", 
		"'47. I will handle any academic issues I might encounter.'", "'48. UNL was my first choice.'", 
		"'1. I plan to live'", "'2. My first term, I plan to work on campus this many hours:'", 
		"'3. My first term, I plan to work off campus this many hours:'", "'4. I am interested in one of the Pre-professional areas:'", 
		"'5. My strongest subjects are (select all that apply):'", "'6. My most difficult subjects are (select all that apply): '", 
		"'7. The average number of hours I spent in high school studying outside of class time:'", 
		"'8. The amount of time I plan to study outside of class time in college:'", 
		"'9. Number of activities I plan to be involved in at UNL:'", "'10. Activities in which I plan to participate during my first year that may impact my'", 
		"'planning:'", "'11. My parents earned a Bachelor's Degree.'", "'21. Do you plan to take coursework in a modern/classical (i.e., non-English) language?'", 
		"'22. Briefly describe your career interests:'", "'23. Majors of Interest:'", 
		"'Strongly Agree'", "'Very much like me'", "'Agree'", "'Mostly like me'", 
		"'Neutral'", "'Somewhat like me'", "'Disagree'", "'Not much like me'", 
		"'Strongly Disagree'", "'Not like me at all'", "'Extremely Concerned'", 
		"'Moderately Concerned'", "'Somewhat Concerned'", "'Slightly Concerned'", 
		"'Not Concerned'", null, null, null, null, null, null, "'\r'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "PAGE_HEAD", "CONCERNS", 
		"PERSEVERANCE", "MOTIVATION", "TIME", "APTITUDE", "SK", "SURVEY", "ANYTHING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Inventory.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	double[] rho = new double[34];
	double[] qs = {12,13,14,15,16,17,18,19,20,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48};
	int count = 0;

	public InventoryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PerseveranceContext extends ParserRuleContext {
		public TerminalNode PERSEVERANCE() { return getToken(InventoryParser.PERSEVERANCE, 0); }
		public PerseveranceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_perseverance; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterPerseverance(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitPerseverance(this);
		}
	}

	public final PerseveranceContext perseverance() throws RecognitionException {
		PerseveranceContext _localctx = new PerseveranceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_perseverance);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(PERSEVERANCE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Student_tokContext extends ParserRuleContext {
		public Student_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_student_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterStudent_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitStudent_tok(this);
		}
	}

	public final Student_tokContext student_tok() throws RecognitionException {
		Student_tokContext _localctx = new Student_tokContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_student_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nuid_tokContext extends ParserRuleContext {
		public Nuid_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nuid_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterNuid_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitNuid_tok(this);
		}
	}

	public final Nuid_tokContext nuid_tok() throws RecognitionException {
		Nuid_tokContext _localctx = new Nuid_tokContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nuid_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class College_tokContext extends ParserRuleContext {
		public College_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_college_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterCollege_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitCollege_tok(this);
		}
	}

	public final College_tokContext college_tok() throws RecognitionException {
		College_tokContext _localctx = new College_tokContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_college_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ap_tokContext extends ParserRuleContext {
		public Ap_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ap_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterAp_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitAp_tok(this);
		}
	}

	public final Ap_tokContext ap_tok() throws RecognitionException {
		Ap_tokContext _localctx = new Ap_tokContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ap_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ib_tokContext extends ParserRuleContext {
		public Ib_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ib_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterIb_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitIb_tok(this);
		}
	}

	public final Ib_tokContext ib_tok() throws RecognitionException {
		Ib_tokContext _localctx = new Ib_tokContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ib_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Trde_tokContext extends ParserRuleContext {
		public Trde_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trde_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterTrde_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitTrde_tok(this);
		}
	}

	public final Trde_tokContext trde_tok() throws RecognitionException {
		Trde_tokContext _localctx = new Trde_tokContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_trde_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Math_tokContext extends ParserRuleContext {
		public Math_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterMath_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitMath_tok(this);
		}
	}

	public final Math_tokContext math_tok() throws RecognitionException {
		Math_tokContext _localctx = new Math_tokContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_math_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unl_tokContext extends ParserRuleContext {
		public Unl_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unl_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterUnl_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitUnl_tok(this);
		}
	}

	public final Unl_tokContext unl_tok() throws RecognitionException {
		Unl_tokContext _localctx = new Unl_tokContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_unl_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EofContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(InventoryParser.EOF, 0); }
		public EofContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eof; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterEof(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitEof(this);
		}
	}

	public final EofContext eof() throws RecognitionException {
		EofContext _localctx = new EofContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_eof);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InventoryContext extends ParserRuleContext {
		public StudentContext student() {
			return getRuleContext(StudentContext.class,0);
		}
		public NuidContext nuid() {
			return getRuleContext(NuidContext.class,0);
		}
		public CollegemajorContext collegemajor() {
			return getRuleContext(CollegemajorContext.class,0);
		}
		public ApContext ap() {
			return getRuleContext(ApContext.class,0);
		}
		public IbContext ib() {
			return getRuleContext(IbContext.class,0);
		}
		public UnlContext unl() {
			return getRuleContext(UnlContext.class,0);
		}
		public TrdeContext trde() {
			return getRuleContext(TrdeContext.class,0);
		}
		public MathContext math() {
			return getRuleContext(MathContext.class,0);
		}
		public AceContext ace() {
			return getRuleContext(AceContext.class,0);
		}
		public SurveyContext survey() {
			return getRuleContext(SurveyContext.class,0);
		}
		public EofContext eof() {
			return getRuleContext(EofContext.class,0);
		}
		public InventoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inventory; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterInventory(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitInventory(this);
		}
	}

	public final InventoryContext inventory() throws RecognitionException {
		InventoryContext _localctx = new InventoryContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_inventory);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			student();
			setState(103);
			nuid();
			setState(104);
			collegemajor();
			setState(105);
			ap();
			setState(106);
			ib();
			setState(107);
			unl();
			setState(108);
			trde();
			setState(109);
			math();
			setState(110);
			ace();
			setState(111);
			survey();
			setState(112);
			eof();
			 
				  for( int i = 0; i < rho.length; i++ ){
				       System.err.format( "%d,%d,%d\n" , i , (int)qs[i] , (int)rho[i] );
				  }
				  System.err.format( "%d,%d,%d\n" , 0 , (int)qs[0] , (int)rho[0] );
				  System.out.println();
			 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AceContext extends ParserRuleContext {
		public Ace_headContext ace_head;
		public TxtContext txt;
		public List<Ace_headContext> ace_head() {
			return getRuleContexts(Ace_headContext.class);
		}
		public Ace_headContext ace_head(int i) {
			return getRuleContext(Ace_headContext.class,i);
		}
		public List<TxtContext> txt() {
			return getRuleContexts(TxtContext.class);
		}
		public TxtContext txt(int i) {
			return getRuleContext(TxtContext.class,i);
		}
		public AceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterAce(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitAce(this);
		}
	}
